Uploading notebooks for manuscript

--- a/scripts/S2_variables.ipynb
+++ b/scripts/S2_variables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "55205ed4",
+   "id": "1f59316c",
    "metadata": {},
    "source": [
     "# S2 Variables\n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8a41ab90",
+   "execution_count": 2,
+   "id": "1e868500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +82,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "f247341b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "Path(\"../figures\").mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9f96a4a6",
+   "id": "bc03a9eb",
    "metadata": {},
    "outputs": [],
    "source": []
